@@ -2,12 +2,12 @@ AUTOMAKE_OPTIONS = gnu
 
 # including headers for make dist
 noinst_HEADERS =  \
-		network/Client.h \
-		network/Client.tcc \
-		network/Handler.h \
-		network/Handler.tcc \
-		network/Server.h \
-		network/Session.h \
-		network/connection.hpp
+		Client.h \
+		Client.tcc \
+		Handler.h \
+		Handler.tcc \
+		Server.h \
+		Session.h \
+		connection.hpp
 
 
